# pdfz

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTINUATION.md  DEV05_SPRINT3_SUMMARY.md  Dockerfile  LICENSE  LOCAL_DEV.md  MANIFEST.in  README.md  docker-compose.yml  openrouter_key  pyproject.toml
.github/workflows/: ci.yml  lint.yml  test.yml
configs/: README.md  default.toml  local.toml  test.toml
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  CLI_GUIDE.md  DEEPSEEK_INTEGRATION_PLAN.md  DEPLOYMENT.md  DEVELOPMENT_SCHEDULE.md  DOCKER.md  FUTURE_EXTENSIONS.md  OPENROUTER_SETUP.md  OPENROUTER_TESTING.md  PARALLEL_DEVELOPMENT_PLAN.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  SCHEDULE_QUICK_REFERENCE.md  SPRINT1_ARCHITECTURE_ASSESSMENT.md  SPRINT1_COMPLETION_REPORT.md  SPRINT1_CONCURRENT_PROCESSING_STRATEGY.md  SPRINT1_D01_COMPLETION_SUMMARY.md  SPRINT1_INTEGRATION_CHECKLIST.md  SPRINT1_TEST_COVERAGE_REQUIREMENTS.md  SPRINT2_DEVELOPER_ASSESSMENT.md  SPRINT2_PLAN.md  SPRINT3_PLAN.md  SPRINT4_PLAN.md  SPRINT_PLAN.md  TEAM_QUICK_REFERENCE.md  TROUBLESHOOTING.md
docs/components/: BACKENDS.md
docs/design/: BLOCK_PROCESSING.md  EVALUATION.md
docs/interfaces/: BLOCKS_INTERFACE.md  EVAL_INTERFACE.md
examples/: README.md  basic_conversion.py  batch_conversion.py  custom_backend.py  progress_tracking.py
scripts/: COMPLETIONS.md  README.md  cleanup.sh  completion.bash  completion.zsh  docker-build.sh  generate_test_pdfs.py  install-hooks.sh  setup.sh  setup_env.sh
src/docling_hybrid/: README.md  __init__.py
src/docling_hybrid/backends/: README.md  __init__.py  base.py  deepseek_mlx_stub.py  deepseek_vllm.py  deepseek_vllm_stub.py  factory.py  fallback.py  health.py  openrouter_nemotron.py
src/docling_hybrid/blocks/: README.md  __init__.py  base.py  types.py
src/docling_hybrid/cli/: README.md  __init__.py  batch.py  main.py  progress_display.py
src/docling_hybrid/common/: README.md  __init__.py  config.py  errors.py  health.py  ids.py  logging.py  models.py  retry.py
src/docling_hybrid/eval/: README.md  __init__.py  base.py  types.py
src/docling_hybrid/exporters/: README.md  __init__.py
src/docling_hybrid/orchestrator/: README.md  __init__.py  callbacks.py  events.py  models.py  pipeline.py  progress.py
src/docling_hybrid/renderer/: README.md  __init__.py  core.py
tests/: README.md  __init__.py  conftest.py
tests/benchmarks/: __init__.py  conftest.py  test_memory.py  test_performance.py
tests/fixtures/sample_pdfs/: README.md
tests/integration/: __init__.py  conftest.py  test_backend_http.py  test_openrouter_fallback.py  test_openrouter_integration.py  test_pipeline_e2e.py  test_pipeline_integration.py
tests/mocks/: README.md  __init__.py  http.py  responses.py
tests/unit/: __init__.py  test_backends.py  test_cli.py  test_common.py  test_pipeline.py  test_renderer.py  test_retry.py
tests/unit/backends/: test_deepseek_vllm.py  test_fallback.py  test_retry.py
tests/unit/cli/: test_batch.py
tests/unit/common/: test_retry.py
tests/unit/orchestrator/: test_callbacks.py  test_progress.py
tests/utils/: README.md  __init__.py  async_fixtures.py  mock_helpers.py
